<resources>
    <string name="app_name">Todo</string>
    <string name="add_todo">Add Todo</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>
    <string name="todo_list">Todo List</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="type">Type</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="edit_todo">Edit Todo</string>
</resources>