<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootViewEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".EditTodoActivity">

        <ImageView
            android:id="@+id/ivTodoList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTodoList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/edit_todo"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivTodoList" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTodoList"
            app:startIconDrawable="@drawable/tag">

            <EditText
                android:id="@+id/etTitleEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTitle">

            <EditText
                android:id="@+id/etDescriptionEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="250" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilDescription"
            app:startIconDrawable="@drawable/calendar">

            <EditText
                android:id="@+id/etDateEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:cursorVisible="false"
                android:clickable="false"
                android:focusable="false"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilDate"
            app:startIconDrawable="@drawable/categorization">

            <EditText
                android:id="@+id/etTypeEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:cursorVisible="false"
                android:clickable="false"
                android:focusable="false"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilType">

            <Button
                android:id="@+id/btnCancelEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:background="@drawable/background_button"
                android:text="@string/cancel"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnAddEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:text="@string/save"
                app:backgroundTint="@null" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivBackEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>